# app/core/controllers/api/__init__.py
@@ -1,3 +1,4 @@
 from .index import BaseController
 from .auth import AuthController
 from .qrcode import QrCodeController
+from .template import TemplateController
