# app/core/routes/api/base/qrcode.py
@@ -1,23 +1,24 @@
 from flask import Blueprint, request
 
-from .. import api_bp
+from .. import qrcode_bp
 from ....controllers.api import QrCodeController
 from .....utils.decorators.auth import roles_required
 
-qrcode_bp = Blueprint('qrcode', __name__, url_prefix='/qrcodes')
-api_bp.register_blueprint(qrcode_bp)
-
-@qrcode_bp.route("/", methods=["GET", "PUT", "DELETE"])
+@qrcode_bp.route("/", methods=["GET", "POST"])
+@roles_required("Admin", "Customer")
 def qrcode():
     if request.method == "GET":
         return QrCodeController.list()
     elif request.method == "POST":
         return QrCodeController.create()
 
-@qrcode_bp.route("/<int:id>", methods=["GET", "DELETE"])
+@qrcode_bp.route("/<uuid:id>", methods=["GET", "PUT", "DELETE"])
+@roles_required("Admin", "Customer")
 def manage_qrcode(id):
     if request.method == "GET":
         return QrCodeController.get(id)
+    elif request.method == "PUT":
+        return QrCodeController.update(id)
     elif request.method == "DELETE":
         return QrCodeController.delete(id)
 
